# torcka

./: .gitmodules  README.md
fw/: .gitignore
fw/src/: CMakeLists.txt  board.c  board.h  config.h  includes.h  main.c  pico_sdk_import.cmake  ws2812.c  ws2812.h
fw/utils/: flash.sh  reset.sh
model/: torcka-coal_head.3mf  torcka.FCStd
model/prints/: torcka-coal_head.3mf
